Apply `SuppressWarnings` and use private constructors